Complete SupervisePose jros2 migration